--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "autoprefixer": "^6.6.1",
     "axios": "^0.16.2",
     "babel-core": "^6.26.3",
+    "babel-eslint": "^8.2.6",
     "babel-helper-vue-jsx-merge-props": "^2.0.3",
     "babel-loader": "^7.1.4",
     "babel-plugin-component": "^1.1.0",
