--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "html-webpack-plugin": "^2.26.0",
     "inline-manifest-webpack-plugin": "^3.0.1",
     "jquery": "^3.3.1",
+    "js-cookie": "^2.2.0",
     "json-loader": "^0.5.7",
     "json5-loader": "^1.0.1",
     "node-sass": "^4.9.0",
@@ -65,7 +66,7 @@
     "url-loader": "^1.0.1",
     "vue": "^2.4.2",
     "vue-cookie": "^1.1.4",
-    "vue-i18n": "^7.6.0",
+    "vue-i18n": "^7.3.2",
     "vue-lazyload": "^1.2.3",
     "vue-loader": "^13.0.2",
     "vue-resource": "^1.5.1",
