--- a/package.json
+++ b/package.json
@@ -87,6 +87,7 @@
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-latest": "^6.24.1",
     "glob": "^7.1.2",
+    "mockjs": "^1.0.1-beta3",
     "open-browser-webpack-plugin": "0.0.5",
     "webpack-cli": "^3.0.7",
     "webpack-dev-server": "^2.11.2"
